[package]
name = "kushn"
version = "0.1.3"
edition = "2024"
authors = ["dan0xe <dan0xe@proton.me>"]
description = "Kushn is a robust and lightweight utility written in Rust for generating SHA256 hashes of files."
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
glob = "0.3"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "kushn_bench"
harness = false
